
Directory .
 README.debian             Locally Modified          456 


* Update to begin work on 11.08 release.


----------
kfleming    Date: Wed May 18 12:45:06 EDT 2011  CSN: CSN-awb-458
                  Wed May 18 16:45:06 UTC 2011


Directory libperl/AsimShell/lib/AsimShell
 Commands.pm               Locally Modified          457 

Directory libperl/AsimShell/lib
 AsimShell.pm              Locally Modified          457 


Added three commands to asim-shell with the intention of making
command line apm manipulation a bit simpler. I only added those
commands which appear to be necessary for multifpga at this time.
Others may be needed later, including a function to manipulate
parameters.

cp - copies a file with respect to the union dir hierarchy 

create submodel - give a model, awb type, and a path, creates a submodel from
the hierarchy rooted at awb type in the given model

replace module - given a model and a submodel, inserts the submodel
into the model hierarchy


----------
kfleming    Date: Fri May 20 13:53:53 EDT 2011  CSN: CSN-awb-459
                  Fri May 20 17:53:53 UTC 2011


Directory libperl/AsimShell/lib/AsimShell
 Commands.pm               Locally Modified          458 

Directory libperl/AsimShell/lib
 AsimShell.pm              Locally Modified          458 


Added a new command for changing model parameters from command line.
This is useful in communicating setting during the multifpga build.
An option would be to use shell variables, but this seems less robust.


----------
kfleming    Date: Tue May 24 14:57:36 EDT 2011  CSN: CSN-awb-460
                  Tue May 24 18:57:36 UTC 2011


Directory libperl/AsimShell/lib/AsimShell
 Commands.pm               Locally Modified          459 

Directory libperl/AsimShell/lib
 AsimShell.pm              Locally Modified          459 


Added a command line function for renaming apm, yet another needed function on the road to multiple FGPAs. 